[DE-834] CI: tests with Java 17 (#56)
* CI: tests with Java 17

* CI: fix python tests

* CI: fix log levels

* CI: fix SDKMAN cache

* CI: SonarCloud